src/test/resources/fdl/cocos/invalid/UnknownSpecIdentifier.fdl
FDL UnknownSpecIdentifier {
  EQUATION m^^{.} = V^^{.} * @rho_{"s"}
  WITH:
    ALIASES:
      m^^{.} = "Massestrom";

    SPECIFICATIONS:
      w^^{.} = "length"/"time";
}